--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,10 @@ dependencies:
   dotted_line: ^3.1.0
   fluttertoast: ^8.1.1
   image_picker: ^0.8.7+5
-  swiping_card_deck: ^1.3.0
+  swipe_cards: ^2.0.0+1
+
+
+#  swiping_card_deck: ^1.3.0
 
 dev_dependencies:
   flutter_test:
